# jsonator

./: .gitignore  LICENSE  README.md  README.rst  makefile  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: linters.yml  python-package.yml
jsonator/: __init__.py  __main__.py  enum.py  jsonator.py  models.py  output.py  report.py
tests/: addons.py  test_filesystem.py  test_format_json_file.py  test_main.py  test_tool.py
