[build-system]
requires = [
    "hatchling>=0.25.1",
]
build-backend = "hatchling.build"

[project]
name = "jsonator"
version = "0.1.11"
authors = [
  { name="Sergey Fomin", email="sergiusnn@gmail.com" },
]
description = "JSON formatting and validating tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
"Homepage" = "https://github.com/sfominx/jsonator"

[tool.hatch.build.targets.sdist]
include = [
    "/jsonator",
]

[tool.hatch.build.targets.wheel]
include = [
    "/jsonator/*",
]

[project.scripts]
jsonator = "jsonator:main"

[tool.poetry]
readme = "README.md"
name = "jsonator"
version = "0.1.11"
description = "JSON formatting and validating tool"
authors = [
  "Sergey Fomin <sergiusnn@gmail.com>",
]
[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
build = "^1.0.3"
twine = "^5.0.0"
pylint = "^3.1.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
black = "^24.2.0"

[tool.pylint]
enable = ["useless-suppression"]
disable = ["similarities", "fixme"]

[tool.pylint.'MESSAGES CONTROL']
output-format = "colorized"

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.vulture]
ignore_names = []
ignore_decorators = ["@post_dump", "@post_load"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"
# preview = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "C90",
    "I",
    "N",
    # "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "TRIO",
    # "S",
    "FA",
    "BLE",
    # "FBT",
    "B",
    "A",
    "COM",
    # "CPY",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG"
]
ignore = ["ANN101", "ANN401", "ANN204", "COM812", "ISC001", "D107", "D105", "FA100"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
